# Book-Manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  book-catalogue.service  book-manager.sqlite  build.gradle  build.gradle.kts  gradle.properties  log_config.yaml  logger.yaml  pyproject.toml  run.py  settings.gradle  settings.gradle.kts
.github/: dependabot.yaml
.github/workflows/: codeql.yml  gradle.yml  publishing.yaml
.run/: Book-Manager [dependencyUpdates].run.xml  Book-Manager [run].run.xml
app/: build.gradle.kts
app/src/main/jte/components/: footer.kte  navbar.kte
app/src/main/jte/templates/: index.kte
app/src/main/resources/: default.properties  log4j2.properties
book_catalogue/: __init__.py  __main__.py  console.py  controller.py  database.py  isbn.py  models.py  responses.py  schemas.py  settings.py
book_catalogue/controllers/: __init__.py  _author.py  _book.py  _format.py  _publisher.py  _series.py  _user.py  author.py  book.py  creator.py  format.py  genre.py  publisher.py  role.py  series.py  user.py
book_catalogue/database/: __init__.py  enum_converter.py  tables.py
book_catalogue/routers/: html.py
book_catalogue/routers/api/: __init__.py  _author.py  _book.py  _format.py  _publisher.py  _series.py  _user.py  author.py  book.py  creator.py  format.py  genre.py  publisher.py  role.py  series.py  user.py
book_catalogue/routers/html/: __init__.py  _utils.py  author.py  book.py  creator.py  format.py  genre.py  publisher.py  role.py  series.py  user.py
book_catalogue/routing/: api.py  html.py
book_catalogue/schemas/: __init__.py  _author.py  _base.py  _book.py  _format.py  _publisher.py  _series.py  _user.py  author.py  book.py  creator.py  format.py  genre.py  publisher.py  role.py  series.py  user.py
book_catalogue/services/: open_library.py  sqlite_cache.py
book_catalogue/services/google_books/: __init__.py  schemas.py  service.py
book_catalogue/services/open_library/: __init__.py  service.py
book_catalogue/services/open_library/schemas/: __init__.py  author.py  edition.py  work.py
book_manager/: __init__.py  __main__.py  controller.py  database.py  isbn.py  models.py  responses.py  schemas.py
book_manager/database/: __init__.py  tables.py
book_manager/models/: book.py  isbn.py  user.py
book_manager/routing/: api.py  html.py
book_manager/services/: open_library.py
bookshelf/: __init__.py  __main__.py  console.py  isbn.py  settings.py
bookshelf/controllers/: book.py  creator.py  format.py  genre.py  publisher.py  role.py  series.py  user.py
bookshelf/database/: __init__.py  tables.py
bookshelf/models/: book.py  creator.py  format.py  genre.py  publisher.py  role.py  series.py  user.py
bookshelf/open_library/: __init__.py  service.py
bookshelf/open_library/schemas/: author.py  edition.py  work.py
bookshelf/routers/: __init__.py
bookshelf/routers/api/: __init__.py  book.py  creator.py  format.py  genre.py  publisher.py  role.py  series.py  user.py
bookshelf/routers/html/: __init__.py  book.py  creator.py  format.py  genre.py  publisher.py  role.py  series.py  user.py  utils.py
bookshelf/services/: sqlite_cache.py
bookshelf/services/google_books/: __init__.py  schemas.py  service.py
bookshelf/services/open_library/: __init__.py  service.py
bookshelf/services/open_library/schemas/: __init__.py  author.py  edition.py  work.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
openlibrary/: build.gradle.kts  cache.sqlite
openlibrary/src/test/resources/: log4j2.properties
src/main/jte/: edit_book.kte  index.kte  list_books.kte
src/main/jte/components/: adjustable_columns.kte  footer.kte  navbar.kte  settings_box.kte
src/main/jte/components/book/: filter.kte  view.kte
src/main/jte/components/creator/: view.kte
src/main/jte/components/forms/: input.kte  input_date.kte  input_int.kte  input_long.kte  input_number.kte  textarea.kte
src/main/jte/templates/: index.kte
src/main/resources/: default.properties  log4j2.properties  log4j2.xml  openapi.yaml
src/main/resources/static/: about.html  collection.html  index.html  loan.html  navbar.html  wishlist.html
src/main/resources/templates/: exception.ftl
static/: scripts.js
static/css/: bulma-ayu-dark.css  bulma-ayu-mirage.css  bulma-dark.css  bulma-srcery.css  custom-bulma.css  styles.css
static/js/: bulma-modal.js  bulma-slider.js  scripts.js  settings-box.js
templates/: base.jinja  collection.html  edit_author.html  edit_base.jinja  edit_book.html  edit_creator.html  edit_format.html  edit_genre.html  edit_publisher.html  edit_role.html  edit_series.html  edit_user.html  home.html  index.html  list_authors.html  list_base.jinja  list_books.html  list_creators.html  list_formats.html  list_genres.html  list_publishers.html  list_roles.html  list_series.html  list_users.html  update_book.html  user_wishlist.html  view_author.html  view_base.jinja  view_book.html  view_creator.html  view_format.html  view_genre.html  view_publisher.html  view_role.html  view_series.html  view_user.html  wishlist.html
templates/components/: add_book.jinja  author_column.jinja  book_column.jinja  columns_slider.jinja  create_boxes.jinja  filter_books.jinja  filter_boxes.jinja  footer.jinja  forms.jinja  import_book.jinja  list_boxes.jinja  list_cards.jinja  navbar.jinja  publisher_column.jinja  series_column.jinja  settings_box.jinja  user_column.jinja
templates/components/add_box/: book.jinja
templates/components/columns/: author.jinja  book.jinja  creator.jinja  format.jinja  genre.jinja  publisher.jinja  role.jinja  series.jinja  user.jinja
templates/components/filter_box/: book.jinja  creator.jinja  format.jinja  genre.jinja  publisher.jinja  role.jinja  series.jinja  user.jinja
templates/components/filters/: author.jinja  book.jinja  creator.jinja  genre.jinja  publisher.jinja  series.jinja  user.jinja
templates/components/list_boxes/: edit.jinja  view.jinja
templates/macros/: filters.jinja  forms.jinja
(+310 files in other folders)
