[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "BuriedInCode@tuta.io", name = "BuriedInCode"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed"
]
dependencies = [
  "fastapi >= 0.89.0",
  "jinja2 >= 3.1.2",
  "pony >= 0.7.16",
  "pydantic >= 1.10.4",
  "pyyaml >= 6.0",
  "ratelimit >= 2.2.1",
  "requests >= 2.28.1",
  "rich >= 13.0.1",
  "tomli-w >= 1.0.0",
  "uvicorn >= 0.20.0"
]
description = ""
dynamic = ["version"]
keywords = []
license = "MIT"
name = "book-catalogue"
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
  "pre-commit >= 2.21.0"
]

[project.scripts]

[project.urls]
Documentation = "https://github.com/Buried-In-Code/Book-Catalogue#readme"
Homepage = "https://pypi.org/project/Book-Catalogue"
Issues = "https://github.com/Buried-In-Code/Book-Catalogue/issues"
Source = "https://github.com/Buried-In-Code/Book-Catalogue"

[tool.bandit]
recursive = true
skips = ["B101", "B104"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.version]
path = "book_catalogue/__init__.py"

[tool.isort]
default_section = "THIRDPARTY"
line_length = 100
profile = "black"
