[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "BuriedInCode@tuta.io", name = "BuriedInCode"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed"
]
dependencies = [
  "fastapi >= 0.89.0",
  "jinja2 >= 3.1.0",
  "pony >= 0.7.16",
  "pydantic >= 1.10.0",
  "ratelimit >= 2.2.0",
  "requests >= 2.28.0",
  "rich >= 13.3.0",
  "tomli-w >= 1.0.0",
  "uvicorn >= 0.20.0"
]
description = ""
dynamic = ["version"]
keywords = []
license = "MIT"
name = "book-catalogue"
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
  "pre-commit >= 3.0.0"
]

[project.scripts]

[project.urls]
Documentation = "https://github.com/Buried-In-Code/Book-Catalogue#readme"
Homepage = "https://pypi.org/project/Book-Catalogue"
Issues = "https://github.com/Buried-In-Code/Book-Catalogue/issues"
Source = "https://github.com/Buried-In-Code/Book-Catalogue"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.version]
path = "book_catalogue/__init__.py"

[tool.ruff]
fix = true
ignore = [
  "A001",
  "A003",
  "ANN101",
  "ANN102",
  "ANN204",
  "ANN206",
  "PLR0913",
  "PLR2004"
]
line-length = 100
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C4",
  "C90",
  # "D",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "TID",
  "UP",
  "W",
  "YTT"
]
target-version = "py311"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.per-file-ignores]
"book_catalogue/routers/*" = ["ANN201", "ANN202", "B008"]
"tests/test_*.py" = ["ANN201", "S101"]
