[project]
authors = [
  {email = "BuriedInCode@tuta.io", name = "BuriedInCode"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed"
]
dependencies = [
  "fastapi >= 0.92.0",
  "jinja2 >= 3.1.2",
  "pony >= 0.7.16",
  "pydantic >= 1.10.5",
  "ratelimit >= 2.2.1",
  "requests >= 2.28.2",
  "rich >= 13.3.1",
  "tomli-w >= 1.0.0",
  "uvicorn >= 0.20.0"
]
description = "It's a book catalogue.... for cataloging books."
dynamic = ["version"]
keywords = []
license = {text = "MIT"}
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
  "pre-commit >= 3.0.4"
]

[project.scripts]

[project.urls]
Documentation = "https://github.com/Buried-In-Code/Book-Catalogue#readme"
Homepage = "https://pypi.org/project/Book-Catalogue"
Issues = "https://github.com/Buried-In-Code/Book-Catalogue/issues"
Source = "https://github.com/Buried-In-Code/Book-Catalogue"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pdm.version]
path = "book_catalogue/__init__.py"
source = "file"

[tool.ruff]
fix = true
format = "grouped"
ignore = [
  "A001",
  "A003",
  "ANN101",
  "ANN102",
  "ANN204",
  "ANN206",
  "C901"
]
line-length = 100
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C4",
  "C90",
  # "D",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "N",
  "PLC",
  "PLE",
  "PLW",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "TID",
  "UP",
  "W",
  "YTT"
]
target-version = "py311"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.per-file-ignores]
"book_catalogue/routers/*" = ["ANN201", "ANN202", "B008"]
"tests/test_*.py" = ["ANN201", "S101"]
